--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,13 @@ pnpm-debug.log*
 
 # jetbrains setting folder
 .idea/
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# env variables
+.env
+dev.env
+prod.env
