--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
 	"dependencies": {
 		"@astrojs/check": "^0.9.4",
 		"astro": "^5.3.0",
+		"lucide-astro": "^0.536.0",
 		"typescript": "^5.4.4"
 	},
 	"devDependencies": {
+		"@tailwindcss/postcss": "^4.1.11",
+		"autoprefixer": "^10.4.21",
+		"postcss": "^8.5.6",
 		"prettier": "^3.2.5",
-		"prettier-plugin-astro": "^0.13.0"
+		"prettier-plugin-astro": "^0.13.0",
+		"tailwindcss": "^4.1.11"
 	}
 }
