--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 	},
 	"dependencies": {
 		"@astrojs/check": "^0.9.4",
+		"@fontsource-variable/inter": "^5.2.6",
+		"@fontsource/jetbrains-mono": "^5.2.6",
 		"astro": "^5.3.0",
 		"lucide-astro": "^0.536.0",
 		"typescript": "^5.4.4"
